tests/snapshots/critters__run_on_html_file.snap
---
source: tests/critters.rs
expression: result
---
<html><head>
    <title>Testing</title>
    <style>h1{color:#00f}p{color:purple}.contents{padding:50px;text-align:center}.input-field{padding:10px}div:is(:hover,.active){color:#000}div:is(.selected,:hover){color:#fff}</style><link rel="preload" href="styles.css" as="style">
  </head>
  <body>
    <div class="container">
      <header>
        <div class="banner">Lorem ipsum dolor sit amet</div>
      </header>
    </div>
    <div class="" data-critters-container="">
      <h1>Hello World!</h1>
      <p>This is a paragraph</p>
      <input class="input-field">
      <div class="contents"></div>
      <div class="selected active"></div>
    </div>
    <footer class=""></footer>
  

<link rel="stylesheet" href="styles.css"></body></html>
